결제내역 부분 리펙토링

--- a/src/main/resources/templates/admin/card.html
+++ b/src/main/resources/templates/admin/card.html
@@ -105,7 +105,7 @@
                                 <td>
                                     <input type="text" class="form-control" id="receiptentNm" name="userNm" readonly>
                                     <input type="hidden" id="receiptentId" name="userId">
-                                    <input type="hidden" id="receiptentSeq" name="receiptentSeq">
+                                    <input type="hidden" id="receiptentSeq" name="userSeq">
                                 </td>
                                 <td>
                                     <input type="button" class="btn btn-secondary btn-sm" value="삭제" id="nameDelBtn">
