관리자 권한 관리 버그 수정 완료

--- a/src/main/resources/templates/admin/auth.html
+++ b/src/main/resources/templates/admin/auth.html
@@ -65,7 +65,7 @@
 </main>
 <!-- Modal -->
 <div class="modal fade" id="addManagerModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-scrollable">
+    <div class="modal-dialog modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="modalLabel">관리자 추가</h5>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="table-responsive-xxl">
                     <table id="addManagerTable"
-                           class="text-center table table-hover table-bordered align-middle">
+                           class="text-center table table-hover table-bordered align-middle table-style2">
                         <thead class="table-secondary">
                         <tr>
                             <th scope="col" style="width:21%;">부서</th>
