통합테스트 리펙토링

--- a/src/main/resources/templates/admin/hist.html
+++ b/src/main/resources/templates/admin/hist.html
@@ -163,7 +163,7 @@
                     </th>
                     <td>
                         <input type="text" class="form-control input-money" style="text-align:right;" name="money"
-                               id="histMoney" required>
+                               maxlength="12" id="histMoney" required>
                     </td>
                 </tr>
                 <tr>
@@ -189,7 +189,7 @@
         </form>
         <div class="mb-1 fs-4 gx-5 row">
             <div class="col">
-                총 <span class="fw-bold" id="listTotCnt"></span>건이 조회되었습니다.
+                총 <span class="fw-bold" id="listTotCnt">0</span>건이 조회되었습니다.
             </div>
             <div class="col text-end">
                 <button class="btn btn-secondary" id="histAtchBtn">첨부파일</button>
