--- a/src/main/resources/templates/admin/hist.html
+++ b/src/main/resources/templates/admin/hist.html
@@ -30,7 +30,7 @@
                         background-color:#ffffff;" readonly>
                     </td>
                     <td style="width: 45%;"></td>
-                    <th class="pe-3 fs-3 fw-bold" style="width:10%;" align="right">합계 :</th>
+                    <th class="pe-1 fs-3 fw-bold" style="width:10%;" align="right">총 합계 :</th>
                     <td align="right" class="fs-3 fw-bold" id="chartSum">
                     </td>
                 </tr>
