--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,7 +15,8 @@
                     <div class="card-body p-5">
                         <div th:if="${errorMsg != null}" th:text="${errorMsg}" class="alert alert-danger" role="alert">
                         </div>
-                        <form method="POST" th:action="@{/login_proc}" class="needs-validation">
+                        <form method="POST" id="loginForm" th:action="@{/login_proc}" class="needs-validation">
+<!--                            <form method="POST" id="loginForm" th:action="@{/login_proc}" class="needs-validation">-->
                             <div class="mb-3">
                                 <label class="mb-2 text-muted" for="userId">아이디</label>
                                 <input id="userId" type="text" class="form-control" name="userId" required="required" autofocus>
